--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Lambda-Calculator</title>
 </head>
 <body>
-    <h1>First</h1>
-    <p>Second</p>
+​
+<h1>Lambda-Calculator</h1>
+​
+<p>Enter:</p>
+
+<form name="input" action="html_form_action.php" method="post">
+Enter: <input type="text" name="user">
+<input type="submit" value="Submit">
+</form>
+
+​
 </body>
 </html>
