--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>Enter:</p>
 
 <form name="input" action="html_form_action.php" method="post">
-Enter: <input type="text" name="user">
+<input type="text" name="user">
 <input type="submit" value="Submit">
 </form>
 
