--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h3 class="masthead-brand">Lambda-Calculator</h3>
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="http://Shadoom7.github.io/">Home</a>
-        <a class="nav-link" href="#">Examples</a>
+        <a class="nav-link" href="http://Shadoom7.github.io/examples.html">Examples</a>
       </nav>
     </div>
   </header>
