--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Enter your equation</h1>
     <form  action = "https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1" methon = "get">
-      <input type="text" name="equation" >
+      <input type = "string" name = "name">
+      <input type="text" name="content" >
     </form>
     <p class="lead"><br>1.You should use "\\" instead of "λ" in the equation <br><br> 2. you should add an "@" before each λ function you wrote to combine it with the first parameter after it.<br><br> 3.Don't use parentheses. Write each binary operator as a function that takes the first two parameters afterwards.  </p>
 
