--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
         }
       }
     </style>
+    <script type="text/javascript">
+        function calculate() {
+            $.ajax({
+                type: "GET",
+                dataType: "json",
+                url: "https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" ,//url
+                data: $('#form1').serialize(),
+                success: function (result) {
+                    document.getElementById("demo").innerHTML=result;
+                },
+                error : function() {
+                    alert("Error");
+                }
+            });
+        }
+    </script>
 
 
   </head>
@@ -37,9 +53,11 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Enter your equation</h1>
-    <form  action = "https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" methon = "get">
+    <div id="kernel">
+    <form  id="form1" action="##" >
       <input type="text" name="content" >
     </form>
+  </div>
     <p class="lead"><br>1.You should use "\\" instead of "λ" in the equation <br><br> 2. you should add an "@" before each λ function you wrote to combine it with the first parameter after it.<br><br> 3.Don't use parentheses. Write each binary operator as a function that takes the first two parameters afterwards.  </p>
 
   </main>
