--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 url: "https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" ,//url
                 data: $('#form1').serialize(),
                 success: function (result) {
-                    document.getElementById("demo").innerHTML=result;
+                    document.getElementById("kernel").innerHTML=result;
                 },
                 error : function() {
                     alert("Error");
