--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         }
       }
     </style>
+
+    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript">
         function calculate() {
             $.ajax({
@@ -54,7 +56,7 @@
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Enter your equation</h1>
     <div id="kernel">
-    <form  id="form1" action="##" >
+    <form  id="form1">
       <input type="text" name="content" >
     </form>
   </div>
