--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
       }
     </style>
-    <!--
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
     <script src="http://malsup.github.com/jquery.form.js"></script>
 
@@ -28,12 +28,12 @@
         // wait for the DOM to be loaded
         $(document).ready(function() {
             // bind 'myForm' and provide a simple callback function
-            $('#form1').ajaxForm(function() {
+            $('#form1').ajaxForm(function(event) {
                 alert("Thank you for your comment!");
             });
         });
     </script>
-
+<!--
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript">
         function calculate() {
@@ -71,6 +71,7 @@
     <div id="kernel">
       <form  id="form1" action ="https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" method = "get">
         <input type="text" name="content" >
+        <button type="submit">Calculate</button>
       </form>
     </div>
     <p class="lead"><br>1.You should use "\\" instead of "λ" in the equation <br><br> 2. you should add an "@" before each λ function you wrote to combine it with the first parameter after it.<br><br> 3.Don't use parentheses. Write each binary operator as a function that takes the first two parameters afterwards.  </p>
