--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div id="kernel">
       <form  id="form1" action ="##" method = "get">
         <input type="text" name="content" >
-        <input type="botton" value="Calculate" onclick="calculate">
+        <input type="button" value="Calculate" onclick="calculate">
       </form>
     </div>
     <p class="lead"><br>1.You should use "\\" instead of "λ" in the equation <br><br> 2. you should add an "@" before each λ function you wrote to combine it with the first parameter after it.<br><br> 3.Don't use parentheses. Write each binary operator as a function that takes the first two parameters afterwards.  </p>
