--- a/index.html
+++ b/index.html
@@ -21,25 +21,20 @@
       }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!--
+
     <script type="text/javascript">
       $(document).ready(function() {
-        $('#submit').click(function () {
-          $.ajax({ url: "https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test",
-                   type: "GET",
-                   dataType: "json",
-                   data: $('#form1').serialize(),
-                   success: function (result) {
-                     alert("Thank you for your comment!");
-                   },
-                   error : function() {
-                       alert("Error");
-                   }
-                 });
-          })
-        })
+        $("#form1").submit(function(event){
+          event.preventDefault(); //prevent default action
+          var post_url = $(this).attr("action"); //get form action url
+          var form_data = $(this).serialize(); //Encode form elements for submission
+          $.get( post_url, form_data, function( response ) {
+            alert("Thank you for your comment!");
+          });
+        });
+      })
   </script>
--->
+<!--
       <script type="text/javascript">
           function calculate() {
               $.ajax({
@@ -58,7 +53,7 @@
               });
           }
       </script>
-
+-->
   </head>
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
