--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         });
       })
   </script>
--->
+
       <script type="text/javascript">
           function calculate() {
               $.ajax({
@@ -53,7 +53,7 @@
               });
           }
       </script>
-
+-->
   </head>
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -70,7 +70,7 @@
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Enter your equation</h1>
     <div id="kernel">
-      <form  id="form1" action ="https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" method = "get">
+      <form  id="form1" action ="https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" method = "post">
         <input type="text" name="content" >
         <input type="submit" name="submit" value="Submit Form" />
       </form>
