--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Enter your equation</h1>
     <div id="kernel">
-      <form  id="form1" action ="https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" method = "post">
+      <form  id="form1" action ="https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" method = "get">
         <input type="text" name="content" >
         <input type="submit" name="submit" value="Submit Form" />
       </form>
