--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function makeCorsRequest(urll) {
   };
 
   xhr.onerror = function() {
-    alert('Woops, there was an error making the request.');
+    alert('Woops, there was an error making the request.'+xhr.responseText);
   };
 
   xhr.send();
