--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ function makeCorsRequest(urll) {
         <input type="submit" name="submit" value="Submit Form" />
       </form>
     <div id="kernel">
+      result
     </div>
     <p class="lead"><br>1.You should use "\\" instead of "λ" in the equation <br><br> 2. you should add an "@" before each λ function you wrote to combine it with the first parameter after it.<br><br> 3.Don't use parentheses. Write each binary operator as a function that takes the first two parameters afterwards.  </p>
 
