--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ function makeCorsRequest(urll) {
 
       <form  id="form1" action ="https://7bgmopnz17.execute-api.us-west-1.amazonaws.com/test1/test" method = "get">
         <input id = "equation" type="text" name="content" >
-        <input type="submit" name="submit" value="Submit Form" />
+        <!--<input type="submit" name="submit" value="Submit Form" />-->
       </form>
     <div id="kernel">
 
